client/src/components/FloatingButton/FloatingButton.css
.floating-button {
  font-size: 24px;
  bottom: 20px;
  right: 20px;
  width: 60px;
  height: 60px;
  background-color: #263f78; 
  position: fixed; color: #fff;
  border: none; border-radius: 50%;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
  outline: none;
  transition: background-color 0.1s ease; 
  cursor: pointer;
  z-index: 101;
}

.floating-button:hover {
  background-color: #4e7133; 
}

